# storage/api-docs/api-docs.json
@@ -13,6 +13,62 @@
         "version": "1.0.0"
     },
     "paths": {
+        "/api-access-request": {
+            "post": {
+                "tags": [
+                    "Access Request"
+                ],
+                "summary": "Create a new Access Request",
+                "description": "Create a Access Request.",
+                "operationId": "StoreAccessRequest",
+                "requestBody": {
+                    "required": true,
+                    "content": {
+                        "application/json": {
+                            "schema": {
+                                "required": [
+                                    "first_name",
+                                    "last_name",
+                                    "company",
+                                    "email",
+                                    "city",
+                                    "address"
+                                ],
+                                "properties": {
+                                    "first_name": {
+                                        "type": "string"
+                                    },
+                                    "last_name": {
+                                        "type": "string"
+                                    },
+                                    "company": {
+                                        "type": "string"
+                                    },
+                                    "email": {
+                                        "type": "string"
+                                    },
+                                    "city": {
+                                        "type": "string"
+                                    },
+                                    "address": {
+                                        "type": "string"
+                                    }
+                                },
+                                "type": "object"
+                            }
+                        }
+                    }
+                },
+                "responses": {
+                    "201": {
+                        "description": "Ticket type created successfully"
+                    },
+                    "400": {
+                        "description": "Invalid input"
+                    }
+                }
+            }
+        },
         "/api/v1/events": {
             "get": {
                 "tags": [
@@ -900,6 +956,10 @@
         }
     },
     "tags": [
+        {
+            "name": "Access Request",
+            "description": "Access Request"
+        },
         {
             "name": "Events",
             "description": "Events"
